# HybridOS-Lite

./: CMakeLists.txt  README.md  build-all.sh  hybridos-lite-app-developing-guide.md  introduction.md  program-introduce.md  scene.c
build-lib/: build-all.sh  config.sh  fetch-all.sh
chgconfig/: CMakeLists.txt  config.h  hibus.c  hibus.h  main.c
cmake/: FindHiSVG.cmake  FindLibhirsvg.cmake  Findhicairo.cmake
config/: chgconfig4.ini  scene1.ini  scene2.ini  scene3.ini  scene4.ini
gear/: CMakeLists.txt  config.h  hibus.c  main.c
include/: sysconfig.h
layout/: chgconfig2.css  gear1.css  gear2.css  hybridos.cfg  manifest.json  newconfig.json
mginit/: bar.c  compsor-mine.c  compsor-mine.h  config.h  hibus.c  hibus.h  indicator.c  mginit.c  parsemanifest.c  parsemanifest.h  speed-meter.c  speed-meter.h  title-description.c  title-description.h  tools.c  tools.h
src/: CMakeLists.txt
src/chgconfig/: CMakeLists.txt  config.h  hibus.c  main.c
src/common/: CMakeLists.txt  svgpaint.c
src/config/: chgconfig1.ini  chgconfig2.ini  gear1.ini  gear2.ini  svgshow1.ini  svgshow2.ini  wheel1.ini  wheel2.ini
src/gear/: hibus.c  main.c
src/include/: svgpaint.h  sysconfig.h
src/layout/: MiniGUI.cfg  chgconfig1-1280.css  chgconfig1-240.css  chgconfig2-1280.css  chgconfig2-240.css  chgconfig2.css  default_layout.css  gear2.css  manifest.json  newconfig.json  svgshow1-240.css  svgshow2-1280.css  svgshow2-240.css  wheel1.css
src/mginit/: CMakeLists.txt  compsor-mine.c  compsor-mine.h  config.h  hibus.c  indicator.c  mginit.c  parsemanifest.c  parsemanifest.h  speed-meter.c  speed-meter.h  title-description.c  tools.c
src/svgshow/: CMakeLists.txt  config.h  hibus.c  main.c
src/wallpaper/: CMakeLists.txt  wallpaper.c
src/wheel/: CMakeLists.txt  config.h  hibus.c  hibus.h  main.c  speed-meter.c
summer2021/: summer2021.md  summer2021_summer2021.md
wallpaper/: wallpaper.c
