cmake_minimum_required(VERSION 3.10)
project(svgshow)
aux_source_directory(. DIR_SRCS)
add_executable(svgshow ${DIR_SRCS})
target_link_libraries(svgshow gobject-2.0 hicairo)
if(PLATFORM_PX30)
include_directories(${GLIB_INCLUDE_DIRS} ${HISVG_INCLUDE_DIR} ${MINIGUI_INCLUDE_DIRS} ${MGEFF_INCLUDE_DIRS})
else()
include_directories(${GLIB_INCLUDE_DIRS} ${HISVG_INCLUDE_DIR} ${HICairo_INCLUDE_DIRS} ${MINIGUI_INCLUDE_DIRS} ${MGEFF_INCLUDE_DIRS})
endif()
target_link_libraries(svgshow ${MINIGUI_LIBRARIES} ${MGEFF_LIBRARIES} ${HISVG_LIBRARIES} ${GLIB_LIBRARIES} hicairo hibus hibox hidomlayout common) 
